--- a/main.css
+++ b/main.css
@@ -65,13 +65,15 @@
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
-    gap: 20px;
+    gap: 50px;
     margin-left: 0%;
-    width: 1400px;
+    width: 1900px;
     height: 320px;
     margin-bottom: 60px;
     padding-left: 0% ;
     margin-top: 30px;
+    position: relative;
+    left: 295px;
     /* background-color: grey; */
    
 
@@ -81,8 +83,8 @@
   }
   
   div .pics1 img {
-    width: 30%;
-    height: 255px;
+    width: 50%;
+    height: 295px;
     position: relative;
     right: 80px;
     
@@ -115,10 +117,12 @@
   #overall2 {
     position: relative;
     bottom: 85px;
+    
+    width: 1400px;
   }
   #category {
     background-color: #EEB4B3;
-    width: 300px;
+    width: 600px;
     height: 270px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     border-radius: 6px;
@@ -127,7 +131,7 @@
   }
   #category > p {
     position: relative;
-    left: 10px;
+    left: 20px;
     font-size: x-large;
     font-weight: 800;
    
@@ -136,25 +140,31 @@
     margin-top: 30px;
     position: relative;
     bottom: 300px;
+    left: 60px;
   }
   .viewbtn1 {
    
-    display:flex;
-    justify-content: center;
-    gap:400px;
-    position: relative;
-    bottom: 770px;
-
+   
+   position: relative;
+   top: 350px;
+   display: flex;
+   gap: 250px;
+   height: 40px;
+   right: 670px;
+   
   }
   .viewbtn2 {
     display:flex;
-    /* background-color: #2F242C; */
+   
     justify-content: center;
     gap: 350px;
     position: relative;
     bottom: 420px;
     position: relative;
-    left: 18px;
+    left: 230px;
+    width: 1400px;
+   
+    
   }
   #head {
    
@@ -194,6 +204,10 @@
   position: relative;
   left: 30px;
   top: 7px;
+  background-color: grey;
+  border-radius: 5px;
+  width: 140px;
+  text-align: center;
 }
 #category > img {
   position: relative;
@@ -203,8 +217,61 @@
   width: 20x;
   height: 20px;
 }
-
-
-
-
+.trial {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: flex-start;
+  gap: 20px;
+  background-color: #EEB4B3;
+  margin-bottom: 120px;
   
+}
+
+.row {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  margin-bottom: 20px;
+}
+
+.item-container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  text-align: center;
+  gap: 10px;
+
+}
+
+.item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  gap: 10px;
+  background-color: grey;
+  width: 600px;
+  
+}
+
+.item img {
+  width: 200px;
+  height: 200px;
+  object-fit: cover;
+  border-radius: 50%;
+}
+
+.item-name {
+  font-weight: bold;
+}
+#btn {
+  position: relative;
+  bottom: 10px;
+}
+#display1 {
+  background-color: #000000;
+  width: 600px;
+  height: 900px;position: inherit;
+
+}
