--- a/main.css
+++ b/main.css
@@ -4,8 +4,9 @@
     align-items: center;
     background-color: #2F242C;
     color: white;
-    padding: 10px;
+    padding: 15px;
     gap: 90px;
+    border-radius: 5px;
   }
   
   .headin p {
@@ -15,37 +16,55 @@
   .headin p:first-child {
     font-size: 24px;
     font-weight: bold;
-    margin-left: 200px;
+    margin-right: 780px;
   }
   
   .headin p:last-child {
     position: absolute;
-    right: 90px;
+    right: 40px;
+    font-weight: bold;
   }
-  
+  #help{
+    position: relative;
+    left: 130px;
+    font-weight: bold;
+    cursor: pointer;
+  }
+  #help:hover {
+    color: #EEB4B3;
+
+  }
   #sign {
     position: relative;
-    left: 80px;
+    left: 140px;
+    font-weight: bold;
+    cursor: pointer;
+  }
+  #sign:hover {
+    color: #EEB4B3;
   }
   #icon1 {
     height: 18px;
     position: relative;
-    right: 85px;
-    
+    left: 118px;
+    width: ;
   }
   #icon2{ 
     height: 18px;
+    position: relative;
+    right: 28px;
   }
   #icon3{
-    height: 18px;
+    height: 13px;
     position: relative;
-    right: 80px;
+    right: 10px;
     background-color: #FF0000;
   }
   #icon4{
     height: 18px;
     position: relative;
-    left: 180px;
+    right: 70px;
+    left: 100px;
   }
   
   #mybutton {
@@ -56,11 +75,9 @@
   }
   #brand {
     position: relative;
-    left: 89x;
+    left: 270px;
   }
-  #cart {
-   
-  }
+  
   .pics1 {
     display: flex;
     flex-direction: row;
@@ -121,7 +138,7 @@
     width: 1400px;
   }
   #category {
-    background-color: #EEB4B3;
+    background-color: #2F242C;
     width: 600px;
     height: 270px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
@@ -129,12 +146,32 @@
     margin-top: 30px;
 
   }
+  #footer {
+    background-color: #2F242C;
+    padding: 20px;
+    text-align: center;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    height: 60px;
+    width: 100%;
+     z-index: 9999;
+     color: white;
+  }
+  #footer > p {
+    position: relative;
+    bottom: 19px;
+  }
   #category > p {
     position: relative;
     left: 20px;
     font-size: x-large;
     font-weight: 800;
-   
+    color: #f0f0f0;
+    cursor: pointer;
+  }
+  #category > p:hover {
+    color: red;
   }
   #gif {
     margin-top: 30px;
@@ -290,10 +327,11 @@
   margin-top: 20px;
   display: flex;
   flex-wrap: wrap;
-  width: 800px;
   position: relative;
   left: 1280px;
-  bottom: 4100px;
+  bottom: 4200px;
+  width: 600px;
+  gap: 5px;
 }
 
 .cart-item {
@@ -314,3 +352,11 @@
 .cart-item .price {
   color: green;
 }
+#definecart{
+  font-family: Arial, Helvetica, sans-serif;
+   position: relative;
+   left: 1400px;
+   bottom: 4190px;
+
+}
+
